--- a/admin/app/views/index.scala.html
+++ b/admin/app/views/index.scala.html
@@ -1,5 +1,7 @@
+
 @()
 
-@main("Welcome to Play") {
-  <h1>Welcome to Play!</h1>
+@base.layout("workingstats admin") {
+    <div id="app"></div>
 }
+
