reorganized board styles

--- a/admin/app/assets/stylesheets/app/wordbank-form.scss
+++ b/admin/app/assets/stylesheets/app/wordbank-form.scss
@@ -3,12 +3,9 @@
   min-width: 400px;
 }
 
-.load-all {
+.board-header > .load-all {
   right: 4%;
   text-align: right;
-}
-
-.task-header {
 }
 
 .task-table > tbody > tr > td {
